--- a/yogsite/templates/login/login.html
+++ b/yogsite/templates/login/login.html
@@ -14,6 +14,8 @@
 			<div class="box">
 				
 				<form id="login-form" method="POST">
+					<input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+
 					<div class="field">
 						<div class="label">Username</div>
 						<div class="control has-icons-left">
